--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ body {
     justify-content: center;
     align-items: center;
     height:100vh;
+	flex-direction: column;
 }
 
 .boardArea {
@@ -64,4 +65,8 @@ body {
 
 .carrier {
 	background-color: lightblue;
+}
+
+.ghost {
+	background-color: grey;
 }
