--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+
+@font-face {
+	font-family: 'ironman';
+	src: url('./font/IronManOfWar2Ncv-E85l.ttf');
+}
+
+@font-face {
+	font-family: 'didact-gothic';
+	src: url('./font/DidactGothic-Regular.ttf');
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -79,16 +89,36 @@ body {
 	height: 100%;
 }
 
+button {
+	font-family: 'didact-gothic', sans-serif;
+}
+
 .initialDiv {
 	height: 50vh;
 	width: 60vw;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	border-radius: 33px;
 	background: linear-gradient(145deg, #163e62, #1a4a75);
 	box-shadow:  16px 16px 19px #164065,
              -16px -16px 19px #1a4a75;
+}
+
+#error,
+#instructions {
+	font-family: 'ironman', sans-serif;
+	letter-spacing: 2px;
+}
+
+.title {
+	font-family: 'ironman', sans-serif;
+	font-size: 6rem;
+	letter-spacing: 10px;
+	-webkit-text-stroke-color: black;
+	-webkit-text-stroke-width: 2px;
+	color: #163e62; 
 }
 
 .gameArea {
