--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@ body {
 	grid-template-rows: 1fr 8fr .5fr;
 	grid-column-gap: 0px;
 	grid-row-gap: 5px;
+	position:relative;
 }
 
 .header {
@@ -78,6 +79,29 @@ body {
 	margin-left: auto;
 	gap: 10px;
 	margin-right: 16px;
+	height:90%;
+}
+
+.heading-tabs li {
+	height:50%;
+	background-color: rgb(145, 173, 211);
+	border-style: solid;
+	border-width: 2px;
+	border-color: rgba(23, 68, 133, 0.178);
+	border-radius: 4px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: 'didact-gothic', sans-serif;
+	padding: 0px 12px;
+	color: whitesmoke;
+	font-weight: 700;
+	transition: all 1s ease-in;
+}
+
+.heading-tabs li:hover {
+	cursor: pointer;
+	background-color: #1a4a75;
 }
 
 .main {
@@ -101,6 +125,7 @@ button {
 	align-items: center;
 	justify-content: center;
 	border-radius: 33px;
+	gap: 1rem;
 	background: linear-gradient(145deg, #163e62, #1a4a75);
 	box-shadow:  16px 16px 19px #164065,
              -16px -16px 19px #1a4a75;
@@ -116,9 +141,9 @@ button {
 	font-family: 'ironman', sans-serif;
 	font-size: 6rem;
 	letter-spacing: 10px;
-	-webkit-text-stroke-color: black;
+	-webkit-text-stroke-color: #002647;
 	-webkit-text-stroke-width: 2px;
-	color: #163e62; 
+	color: #bdbdbd; 
 }
 
 .gameArea {
@@ -179,12 +204,12 @@ button {
 
 #error {
 	color:red;
-	font-size: 1.2rem;
-	height: 1.2rem;
+	font-size: 2rem;
+	height: 2rem;
 }
 
 #instructions {
-	font-size: 2rem;
+	font-size: 3rem;
 	font-weight: bold;
 }
 
@@ -213,3 +238,68 @@ button {
 	background: #fff;
 	color: #1a4a75;
   }
+
+.footer {
+	height: 100%;
+	background-color: #777777;
+	width: 100vw;
+	position:relative;
+	z-index: 4;
+}
+
+.waves {
+	position:absolute;
+	top:65%;
+	right:0;
+	width:100vw;
+}
+
+.wavesvg {
+	width:100vw;
+}
+
+.tutContainer {
+	overflow: auto;
+	height: 60vh;
+	width: 20vw;
+	background-color: #c9c9c9;
+	border: 4px solid #164065;
+	position: absolute;
+	top: -80%;
+	left: 40%;
+	transition: all 2s ease-in-out;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1rem 0;
+	box-sizing: border-box;
+}
+
+.tutContainer.show {
+	top: 20%;
+}
+
+.tutHeader {
+	font-family: 'ironman', sans-serif;
+	font-size: 3rem;
+	letter-spacing: 4px;
+	text-align: center;
+	-webkit-text-stroke-color: #0026477a;
+	-webkit-text-stroke-width: 3px;
+	width:100%;
+	border-bottom: 2px solid #002647;
+}
+
+#closeHowTo {
+	height: 10px;
+	aspect-ratio: 1 / 1;
+	background-color: red;
+	border: 2px solid black;
+	position:absolute;
+	top: 1%;
+	right: 1%;
+}
+
+#closeHowTo:hover {
+	cursor: pointer;
+}
