--- a/src/style.css
+++ b/src/style.css
@@ -126,6 +126,7 @@ button {
 	justify-content: center;
 	border-radius: 33px;
 	gap: 1rem;
+	border: 8px solid #002546a8;
 	background: linear-gradient(145deg, #163e62, #1a4a75);
 	box-shadow:  16px 16px 19px #164065,
              -16px -16px 19px #1a4a75;
@@ -162,6 +163,7 @@ button {
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
     border: 2px solid black;
+	background-color: #265885;
 }
 
 .playerArea {
@@ -273,6 +275,7 @@ button {
 	align-items: center;
 	padding: 1rem 0;
 	box-sizing: border-box;
+	border-radius: 1rem;
 }
 
 .tutContainer.show {
@@ -291,15 +294,48 @@ button {
 }
 
 #closeHowTo {
-	height: 10px;
+	height: 16px;
 	aspect-ratio: 1 / 1;
-	background-color: red;
+	background-color: rgba(255, 0, 0, 0);
 	border: 2px solid black;
 	position:absolute;
 	top: 1%;
 	right: 1%;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	font-size: 12px;
+	border-radius: 50%;
 }
 
 #closeHowTo:hover {
 	cursor: pointer;
+}
+
+.sectionDiv {
+	display: flex;
+	width:100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem 0;
+	gap: .5rem;
+	border-bottom: 2px solid black;
+}
+
+.sectionTitle {
+	font-family: 'ironman', sans-serif;
+	font-size: 2rem;
+	letter-spacing: 3px;
+	text-align: center;
+	-webkit-text-stroke-color: #0026477a;
+	-webkit-text-stroke-width: 2px;
+	text-decoration: underline;
+}
+
+.sectionText {
+	font-size: 1rem;
+	width: 90%;
+	font-family: 'didact-gothic', sans-serif;
 }
