--- a/src/style.css
+++ b/src/style.css
@@ -297,17 +297,18 @@ button {
 	position: absolute;
 	top: -80%;
 	left: 40%;
-	transition: top 2s ease-in-out;
+	transition: transform 2s ease-in-out;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding: 1rem 0;
 	box-sizing: border-box;
 	border-radius: 1rem;
+	z-index: 50;
 }
 
 .tutContainer.show {
-	top: 20%;
+	transform: translateY(150%);
 }
 
 .tutHeader {
